<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wakapp.controler.senlutte.RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:text="@string/inscription"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="43dp"
        tools:text="@string/inscription" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="131dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="270dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rt_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="338dp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="phone"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="404dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="473dp" />
</android.support.constraint.ConstraintLayout>
