<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wakapp.controler.senlutte.Daschbord">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="293dp"
                android:background="@drawable/lutte"
                android:gravity="bottom"
                android:text="@string/tablea_bord"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorGrapeFruit"
                    >
                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"

                        android:tint="@color/colorWhite"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorGrapeFruitDark"
                        android:padding="8dp"
                        android:text="@string/presentation"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        tools:text="@string/presentation" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorBitterSweet"
                    >
                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"

                        android:tint="@color/colorWhite"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorBitterSweetDark"
                        android:padding="8dp"
                        android:text="@string/palmares"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        tools:text="@string/palmares" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorFlower"
                    >
                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"

                        android:tint="@color/colorWhite"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorFlowerDark"
                        android:padding="8dp"
                        android:text="@string/comba"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        tools:text="@string/comba" />

                </LinearLayout>


            </LinearLayout>

            <!-- Second Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorGrass"
                    >

                    <ImageButton
                        android:layout_width="44dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"

                        android:tint="@color/colorWhite" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorGrassDark"
                        android:padding="8dp"
                        android:text="@string/stade"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        tools:text="@string/stade" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorBlueJeans"
                    >
                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"

                        android:tint="@color/colorWhite"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorBlueJeansDark"
                        android:padding="8dp"
                        android:text="@string/tickets"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        tools:text="@string/tickets" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorLavander"
                    >
                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"

                        android:tint="@color/colorWhite"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorLavanderDark"
                        android:padding="8dp"
                        android:text="@string/resultat"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        tools:text="@string/resultat" />

                </LinearLayout>


            </LinearLayout>
            <!-- End Second Row-->
            <!-- Third Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorMint"
                    >

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_help_outline_black_24dp"
                        android:tint="@color/colorWhite" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorMintDark"
                        android:padding="8dp"
                        android:text="@string/aide"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        tools:text="@string/aide" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorAqua"
                    >
                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"

                        android:tint="@color/colorWhite"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorAquaDark"
                        android:padding="8dp"
                        android:text="@string/contact"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp"
                        tools:text="@string/contact" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/colorPinkRose"
                    >
                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"

                        android:tint="@color/colorWhite"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorPinkRoseDark"
                        android:padding="8dp"
                        android:text="@string/apropos"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>
            <!-- End Third Row-->


        </LinearLayout>

    </ScrollView>

</LinearLayout>
